# bank.mcp

./: .gitignore  CHANGES.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DECISIONS.md  SETUP.md
examples/: connection_owners.example.json  obligations.example.json  plaid_items.example.json  receipts.example.json
ops/: com.example.finance-daily.plist  daily.sh  deploy.sh
src/bank_mcp/report/: _report_format.py  _report_sections.py  _report_styles.py  build_site.py  digest_templates.py  email_html.py
src/bank_mcp/report/web/: index.html
src/finance_mcp/: __init__.py  __main__.py  demo.py  finance_agent.py
src/finance_mcp/data/: rules.demo.md
src/finance_mcp/engines/: budget_scorer.py  cashflow_forecaster.py  dispute_agent.py  fee_fraud_scan.py  llm_matcher.py  receipt_scanner.py  recurring.py
src/finance_mcp/ingest/: plaid_bridge.py  plaid_link.py  safehttp.py  sync.py
src/finance_mcp/report/: build_site.py  delivery.py  digest_templates.py
src/finance_mcp/store/: analytics.py  db.py  merchant_categorizer.py  obligation_registry.py  queries.sql  subscription_creep.py
tests/: conftest.py  test_analytics.py  test_budget_scorer.py  test_cashflow_forecaster.py  test_db.py  test_delivery.py  test_digest_templates.py  test_dispute_agent.py  test_fee_fraud_scan.py  test_finance_agent.py  test_llm_matcher.py  test_merchant_categorizer.py  test_plaid_bridge.py  test_receipt_scanner.py  test_recurring.py  test_sync.py  test_transport.py
tests/fixtures/: transactions.sample.json
(+4 files in other folders)
